--- a/KisilerUygulamasiMvvm/app/src/main/res/layout/card_tasarim.xml
+++ b/KisilerUygulamasiMvvm/app/src/main/res/layout/card_tasarim.xml
@@ -28,7 +28,7 @@
                     android:id="@+id/textViewKisiBilgi"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text='@{kisiNesnesi.kisiAd + " - " + kisiNesnesi.kisiTel}'
+                    android:text='@{kisiNesnesi.kisi_ad + " - " + kisiNesnesi.kisi_tel}'
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.5"
